refactor(vvd-foundation): encapsulate connotation custom properties (#1044)
* chore(workspace): update mwc version to 0.22.1

* refactor(vvd-foundation): layout to mixin convention

* layout refactored

* layout aligned

* refactored layout

* experimental

* refactored layout

* update button & icon-button

* button refactor

* typos in icon-button

* annotate types

* typo

* mixin subcategory

* all aligned

* differentiate configs names

* refactor(vwc-icon-button-toggle): decouple component

* connotation typo

* snapshot changed

* fixed tests

* restyle toggle group

* Update components/icon-button/src/vwc-icon-button.scss

* Update components/badge/src/vwc-badge.scss

* Update components/button/src/vwc-button.scss

* refactor(vvd-foundation): encapsulate connotation custom properties

* mixin refactored

* align with connotation

* update icon-button & badge

* icon-button & badge

* scope default

* blockquote

* snackbar

* note

* vwc-text

* text

* need update

* remove shadow open mode workaround

* duplicate deps

* all updated

* typo in styles

* snapshots fix

* fab restore

* removed Safari Fiasco

* switch

* switch

* media controller

* backwards compatability for list item

* banner & linear progress

* audio & media controls

* circular-progress

* icon

* new snapshots

* new snapshot

* banner fix

* banner

* scoping

* incorrect syntax

* badge update

* updates

* updates

* note & controller

* styles

* switch ui tests

* refactoring snackbar (remove note integration)

* modern view ready

* spacing sass var

* modern fixed

* snackbar refactored

* removed import

* snackbar legacy updated

* snackbar layout unit test -> ui tests

* fix badge connotation delegation

* banner fixed

* patch button toggle group

* icon-button-toggle fix

* icon modification

* card correct snapshot

* li

--- a/components/badge/src/vwc-badge.scss
+++ b/components/badge/src/vwc-badge.scss
@@ -6,20 +6,19 @@ $namespace-shape: #{$namespace}-shape;
 @use '@vonage/vvd-foundation/scss/mixins/connotation/config' with (
 	$connotations-set: primary cta success alert warning info,
 	$shades: (soft, contrast),
-	$default: primary
+	$default: primary,
 );
-@use '@vonage/vvd-foundation/scss/mixins/connotation';
+@use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation;
 @use '@vonage/vvd-foundation/scss/mixins/shape-mixins' as shape-mixins with (
 	$variable-name: #{$namespace-shape}
 );
 @use '@vonage/vvd-foundation/scss/mixins/layout/config' as layout-config with (
 	$layout-set: filled outlined soft,
 	$default: filled,
-	$scope: vwc-badge,
 );
 @use '@vonage/vvd-foundation/scss/mixins/layout' as layout;
 
-$vvd-badge--block-size: --#{$namespace}--block-size;
+$vvd-badge--block-size: #{$namespace}--block-size;
 
 
 @include shape-mixins.shape(
@@ -45,6 +44,7 @@ $vvd-badge--block-size: --#{$namespace}--block-size;
 .vwc-badge {
 	@include typography.typography-cat-shorthand('caption-bold');
 	@include layout.layout;
+	@include connotation.connotation;
 	display: inline-block;
 	padding: 0 10px;
 	border: var(#{layout.$vvd-layout-color-outline});
@@ -63,6 +63,8 @@ $vvd-badge--block-size: --#{$namespace}--block-size;
 }
 
 .icon {
+	// TODO remove next line when VIV-704 resolved
+	#{connotation.$vvd-color-connotation}: initial;
 	--icon-size: 12px;
 	$margin: 8px;
 
