--- a/common/foundation/scss/mixins/connotation/_config.scss
+++ b/common/foundation/scss/mixins/connotation/_config.scss
@@ -1,8 +1,17 @@
-@use 'variables';
+$predefined-connotation-set: primary cta success alert warning info announcement;
 
 $base: true !default;
 $default: false !default;
 $shades: () !default;
 $decoratives: () !default;
-$connotations-set: primary cta success alert warning info announcement !default;
-$selector: ':host(#{variables.$compound-placeholder})' !default;
+$connotations-set: $predefined-connotation-set !default;
+$scope: null !default;
+$is-host: false !default; // for backwards compatability on components that aren't yet structured with base wrapper
+
+@function get-scope-prefix() {
+	@if $scope != null {
+		@return '#{$scope}-';
+	} @else {
+		@return '';
+	}
+}
