--- a/common/foundation/scss/mixins/connotation/_variables.scss
+++ b/common/foundation/scss/mixins/connotation/_variables.scss
@@ -1,9 +1,9 @@
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
+@use 'config' as config;
 
-$vvd-color: --vvd-color;
-$vvd-color-on: #{$vvd-color}-on;
-$vvd-color-connotation: #{$vvd-color}-connotation;
-$vvd-color-on-connotation: #{$vvd-color}-on-connotation;
+
+$vvd-color-connotation: --#{config.get-scope-prefix()}connotation;
+$vvd-color-on-connotation: --#{config.get-scope-prefix()}on-connotation;
 
 $compound-placeholder: '[compound]'; // will be replaced by actual compound
 
