--- a/common/foundation/scss/mixins/layout/_config.scss
+++ b/common/foundation/scss/mixins/layout/_config.scss
@@ -2,9 +2,12 @@ $predefined-layout-set: filled outlined soft text ghost;
 
 $default: false !default;
 $layout-set: $predefined-layout-set !default;
+$scope: null !default;
 
-// it is recommended to define a dedicated scope
-// from including scope to prevent too general
-// custom properties from delegating and inccidently
-// affect deeper scopes
-$scope: component !default;
+@function get-scope-prefix() {
+	@if $scope != null {
+		@return '#{$scope}-';
+	} @else {
+		@return '';
+	}
+}
