--- a/components/icon/src/partials/_vwc-icon-connotation.scss
+++ b/components/icon/src/partials/_vwc-icon-connotation.scss
@@ -1,10 +1,11 @@
 @use 'vwc-icon-variables' as icon-variables;
 @use '@vonage/vvd-foundation/scss/mixins/connotation/config' with (
-	$connotations-set: primary cta announcement success alert info
+	$connotations-set: primary cta announcement success alert info,
 );
-@use '@vonage/vvd-foundation/scss/mixins/connotation';
+@use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation;
 
 
-:host {
-	color: var(#{icon-variables.$icon-color-variable-name}, currentColor);
+.icon {
+	@include connotation.connotation;
+	color: var(#{connotation.$vvd-color-connotation}, currentColor);
 }
