--- a/components/icon/src/vwc-icon.scss
+++ b/components/icon/src/vwc-icon.scss
@@ -22,23 +22,24 @@
 }
 
 :host {
+	// TODO deprecate --icon-size as size can actually be set by plain width/height properties (follow VIV-705)
+	$size: var(--icon-size, var(#{icon-variables.$icon-size-variable-name}));/* --icon-size for backwards compatability */
 	display: inline-block;
-	width: var(--icon-size, var(#{icon-variables.$icon-size-variable-name}))/* --icon-size for backwards compatability */;
-	height: var(--icon-size, var(#{icon-variables.$icon-size-variable-name}))/* --icon-size for backwards compatability */;
-	block-size: var(--icon-size, var(#{icon-variables.$icon-size-variable-name}))/* --icon-size for backwards compatability */;
-	inline-size: var(--icon-size, var(#{icon-variables.$icon-size-variable-name}))/* --icon-size for backwards compatability */;
+	width: #{$size};
+	height: #{$size};
+	block-size: #{$size};
+	inline-size: #{$size};
 	line-height: 1;
 	vertical-align: middle;
+}
 
-	figure {
+.icon {
+	display: contents;
 
-		display: contents;
-
-		> svg {
-			block-size: 100%;
-			fill: currentColor;
-			inline-size: 100%;
-			vertical-align: super;
-		}
+	> svg {
+		block-size: 100%;
+		fill: currentColor;
+		inline-size: 100%;
+		vertical-align: super;
 	}
 }
