--- a/components/side-drawer/src/vwc-side-drawer.scss
+++ b/components/side-drawer/src/vwc-side-drawer.scss
@@ -1,7 +1,7 @@
-$side-drawer--padding: --side-drawer--padding;
-$side-drawer--min-inline-size: --side-drawer--min-inline-size;
-$side-drawer--z-index: --side-drawer--z-index;
-$side-drawer--background-color: --side-drawer--background-color;
+$side-drawer-padding: --side-drawer-padding;
+$side-drawer-min-inline-size: --side-drawer-min-inline-size;
+$side-drawer-z-index: --side-drawer-z-index;
+$side-drawer-background-color: --side-drawer-background-color;
 
 $z-index-default: 6;
 $padding-default: 16px;
@@ -17,10 +17,10 @@ $min-inline-size-default: 280px;
 }
 
 .side-drawer {
-	z-index: var(#{$side-drawer--z-index}, #{$z-index-default});
-	background-color: var(#{$side-drawer--background-color}, var(#{scheme-variables.$vvd-color-canvas}));
+	z-index: var(#{$side-drawer-z-index}, #{$z-index-default});
+	background-color: var(#{$side-drawer-background-color}, var(#{scheme-variables.$vvd-color-canvas}));
 	color: var(#{scheme-variables.$vvd-color-on-canvas});
-	min-inline-size: var(#{$side-drawer--min-inline-size}, #{$min-inline-size-default});
+	min-inline-size: var(#{$side-drawer-min-inline-size}, #{$min-inline-size-default});
 
 	&.side-drawer--alternate {
 		background-color: var(#{scheme-variables.$vvd-color-canvas});
@@ -42,13 +42,13 @@ $min-inline-size-default: 280px;
 	display: flex;
 	align-items: center;
 	block-size: 64px;
-	padding-inline-end: var(#{$side-drawer--padding}--top-bar, #{$padding-default});
-	padding-inline-start: var(#{$side-drawer--padding}--top-bar, #{$padding-default});
+	padding-inline-end: var(#{$side-drawer-padding}--top-bar, #{$padding-default});
+	padding-inline-start: var(#{$side-drawer-padding}--top-bar, #{$padding-default});
 }
 
 .side-drawer--content {
-	padding-inline-end: var(#{$side-drawer--padding}--content, #{$padding-default});
-	padding-inline-start: var(#{$side-drawer--padding}--content, #{$padding-default});
+	padding-inline-end: var(#{$side-drawer-padding}--content, #{$padding-default});
+	padding-inline-start: var(#{$side-drawer-padding}--content, #{$padding-default});
 }
 
 .side-drawer--modal {
