--- a/common/foundation/scss/mixins/layout/_config.scss
+++ b/common/foundation/scss/mixins/layout/_config.scss
@@ -3,6 +3,7 @@ $predefined-layout-set: filled outlined soft text ghost;
 $default: false !default;
 $layout-set: $predefined-layout-set !default;
 $scope: null !default;
+$outline-duotone: false !default;
 
 @function get-scope-prefix() {
 	@if $scope != null {
