--- a/components/tags/src/vwc-tag.scss
+++ b/components/tags/src/vwc-tag.scss
@@ -1,4 +1,4 @@
-@use 'partials/vwc-tag-variables' as tag-variables;
+@use 'partials/vwc-tags-variables' as tags-variables;
 @use '@vonage/vwc-icon/src/partials/vwc-icon-variables' as icon-variables;
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 @use '@vonage/vvd-typography/scss/typography' as typography;
@@ -9,7 +9,7 @@
 );
 @use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation;
 @use '@vonage/vvd-foundation/scss/mixins/shape-mixins' as shape-mixins with (
-	$variable-name: #{tag-variables.$namespace-shape}
+	$variable-name: #{tags-variables.$namespace-shape}
 );
 @use '@vonage/vvd-foundation/scss/mixins/layout/config' as layout-config with (
 	$layout-set: outlined soft,
@@ -31,20 +31,20 @@
 	@include typography.typography-cat-shorthand('body-2-bold');
 	@include connotation.connotation;
 	@include layout.layout;
-	#{tag-variables.$namespace-padding-inline}: 10px;
-	#{tag-variables.$namespace-icon-checkmark--padding-inline-end}: 6px;
-	#{tag-variables.$namespace-block-size}: 24px;
-	#{tag-variables.$namespace-icon-checkmark--size}: 16px;
+	#{tags-variables.$namespace-padding-inline}: 10px;
+	#{tags-variables.$namespace-icon-checkmark--padding-inline-end}: 6px;
+	#{tags-variables.$namespace-block-size}: 24px;
+	#{tags-variables.$namespace-icon-checkmark--size}: 16px;
 	#{layout.$vvd-layout-color-outline}: var(#{scheme-variables.$vvd-color-neutral-50});
 	z-index: 0;
 	display: inline-flex;
 	align-items: center;
-	padding: 0 var(#{tag-variables.$namespace-padding-inline});
+	padding: 0 var(#{tags-variables.$namespace-padding-inline});
 	// ignore layout outline color for this component
 	border-color: var(#{scheme-variables.$vvd-color-neutral-50});
 	background-color: var(#{layout.$vvd-layout-color-fill});
-	block-size: var(#{tag-variables.$namespace-block-size});
-	border-radius: var(#{tag-variables.$namespace-shape});
+	block-size: var(#{tags-variables.$namespace-block-size});
+	border-radius: var(#{tags-variables.$namespace-shape});
 	color: var(#{layout.$vvd-layout-color-text});
 
 	&.layout-outlined {
@@ -93,7 +93,7 @@
 }
 
 .vwc-tag__checkmark {
-	block-size: var(#{tag-variables.$namespace-icon-checkmark--size});
+	block-size: var(#{tags-variables.$namespace-icon-checkmark--size});
 	margin-inline-end: 0;
 	margin-inline-start: 0;
 	@media (prefers-reduced-motion: no-preference) {
@@ -101,14 +101,14 @@
 		transition-property: margin-inline-start, margin-inline-end;
 	}
 	.vwc-tag.vwc-tag--selected & {
-		margin-inline-end: var(#{tag-variables.$namespace-icon-checkmark--padding-inline-end});
-		margin-inline-start: calc(4px - var(#{tag-variables.$namespace-padding-inline}));
+		margin-inline-end: var(#{tags-variables.$namespace-icon-checkmark--padding-inline-end});
+		margin-inline-start: calc(4px - var(#{tags-variables.$namespace-padding-inline}));
 	}
 
 	> .vwc-tag__icon {
 		display: block;
-		block-size: var(#{tag-variables.$namespace-icon-checkmark--size});
-		inline-size: var(#{tag-variables.$namespace-icon-checkmark--size});
+		block-size: var(#{tags-variables.$namespace-icon-checkmark--size});
+		inline-size: var(#{tags-variables.$namespace-icon-checkmark--size});
 		@media (prefers-reduced-motion: no-preference) {
 			transition: inline-size 0.1s;
 		}
