--- a/components/badge/src/vwc-badge.scss
+++ b/components/badge/src/vwc-badge.scss
@@ -1,6 +1,7 @@
 $namespace: --vvd-badge;
 $namespace-shape: #{$namespace}-shape;
 
+@use '@vonage/vwc-icon/src/partials/vwc-icon-variables' as icon-variables;
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
 @use '@vonage/vvd-typography/scss/typography' as typography;
 @use '@vonage/vvd-foundation/scss/mixins/connotation/config' with (
@@ -14,6 +15,7 @@ $namespace-shape: #{$namespace}-shape;
 );
 @use '@vonage/vvd-foundation/scss/mixins/layout/config' as layout-config with (
 	$layout-set: filled outlined soft,
+	$outline-duotone: true,
 	$default: filled,
 );
 @use '@vonage/vvd-foundation/scss/mixins/layout' as layout;
@@ -29,7 +31,7 @@ $vvd-badge--block-size: #{$namespace}--block-size;
 );
 
 
-:host {
+:host(:not([dense]):not([enlarged])) {
 	#{$vvd-badge--block-size}: 24px;
 }
 
@@ -45,9 +47,12 @@ $vvd-badge--block-size: #{$namespace}--block-size;
 	@include typography.typography-cat-shorthand('caption-bold');
 	@include layout.layout;
 	@include connotation.connotation;
-	display: inline-block;
+	display: inline-flex;
+	height: var(#{$vvd-badge--block-size});
+	box-sizing: border-box;
+	align-items: center;
 	padding: 0 10px;
-	border: var(#{layout.$vvd-layout-color-outline});
+	border: 1px solid var(#{layout.$vvd-layout-color-outline});
 	background-color: var(#{layout.$vvd-layout-color-fill});
 	border-radius: var(#{$namespace-shape});
 	color: var(#{layout.$vvd-layout-color-text});
@@ -63,10 +68,16 @@ $vvd-badge--block-size: #{$namespace}--block-size;
 }
 
 .icon {
-	// TODO remove next line when VIV-704 resolved
-	#{connotation.$vvd-color-connotation}: initial;
-	--icon-size: 12px;
 	$margin: 8px;
+	block-size: 12px;
+	line-height: 1;
+
+	> vwc-icon {
+		--icon-size: 12px;
+		// TODO remove next line when VIV-704 resolved
+		#{connotation.$vvd-color-connotation}: initial;
+		vertical-align: top;
+	}
 
 	&.icon--leading {
 		margin-inline-end: $margin;
