--- a/components/inline/src/vwc-inline.scss
+++ b/components/inline/src/vwc-inline.scss
@@ -10,11 +10,10 @@ $items-min-inline-sizes: (
 	'sm': 10rem,
 	'md': 20rem,
 	'lg': 30rem,
-	'block': 1fr
 );
 
 @each $key, $value in $items-min-inline-sizes {
-	:host([size='#{$key}'i]) {
+	:host([inlineSize='#{$key}'i]) {
 		#{$items-min-inline-size-v-name}: $value;
 	}
 }
@@ -23,12 +22,12 @@ $items-min-inline-sizes: (
 /* #region SPACING */
 $items-spacings: (
 	// ! hardcoded values should be defined and auto-generated to, and by, design tokens
-	'sm': 24px,
-	'md': 32px
+	'md': 24px,
+	'xl': 32px
 );
 
 @each $key, $value in $items-spacings {
-	:host([spacing='#{$key}'i]) {
+	:host([columnSpacing='#{$key}'i]) {
 		#{$items-spacing-v-name}: $value;
 	}
 }
@@ -52,7 +51,7 @@ $items-spacings: (
 	inline-size: 100%;
 }
 
-:host([size="block"i]) {
+:host([inlineSize="block"i]) {
 	grid-template-columns: 1fr;
 }
 
