--- a/components/button/src/vwc-button.scss
+++ b/components/button/src/vwc-button.scss
@@ -105,7 +105,7 @@
 		--mdc-theme-on-primary: var(#{button-variables.$vvd-button-on-color}, var(#{layout.$vvd-layout-color-text}));
 	}
 
-	:host([outlined]) & {
+	.layout-outlined {
 		--mdc-theme-primary: var(#{button-variables.$vvd-button-color}, var(#{layout.$vvd-layout-color-text}));
 		--mdc-theme-on-primary: var(#{button-variables.$vvd-button-on-color}, var(#{scheme-variables.$vvd-color-on-canvas}));
 	}
