--- a/components/side-drawer/src/vwc-side-drawer.scss
+++ b/components/side-drawer/src/vwc-side-drawer.scss
@@ -51,7 +51,7 @@ $min-inline-size-default: 280px;
 	$gutter: var(#{$side-drawer-padding}--content, #{$padding-default});
 	padding-inline-end: #{$gutter};
 	padding-inline-start: #{$gutter};
-	.side-drawer--pin & {
+	:not(.side-drawer--unpin) & {
 		position: sticky;
 		top: 0;
 	}
